Fix legal page layout overflow

--- a/client/src/pages/legal/index.scss
+++ b/client/src/pages/legal/index.scss
@@ -4,6 +4,9 @@
   background: #f5f6fb;
   color: #1f2937;
   box-sizing: border-box;
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .legal-card {
